// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when component is mounted when user is logged in renders correctly 1`] = `
<div
  currentUser={true}
  name="products"
  path="/products/homepage"
  render={[Function]}
>
   - Render: 
  <div
    id={1}
    name="game"
    path="/game_setting"
    render={[Function]}
  >
    Info -
     
    <div
      className="Component-root-9"
    >
      <div
        className="Component-header-7"
      >
        <div
          className="Component-root-11"
        >
          <img
            alt="diamond"
            className="Component-icon-10"
            src="/icons/diamond.png"
          />
          <p
            className="MuiTypography-root-12 MuiTypography-body1-21"
          >
            0
          </p>
        </div>
        <a
          aria-label="My profile"
          className="MuiButtonBase-root-55 MuiIconButton-root-49 Component-root-48"
          href="/profile"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiIconButton-label-54"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-58 MuiSvgIcon-fontSizeLarge-66"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0V0z"
                fill="none"
              />
              <g>
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33C4.62 15.49 4 13.82 4 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83z"
                />
                <path
                  d="M12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"
                />
              </g>
            </svg>
          </span>
          <span
            className="MuiTouchRipple-root-95"
          />
        </a>
      </div>
      <div
        className="Component-container-4"
      >
        <img
          alt="Prizey"
          className="Component-logoImage-8"
          src="/logo.png"
        />
        <div
          className="Component-caption-2"
        />
        <div
          className="Component-children-3"
        >
          <a
            className="Component-root-1"
            href="/game"
            onClick={[Function]}
          >
            <div
              className="Component-root-68"
            >
              <div
                aria-label="rouletteItem-0"
                onMouseDown={[Function]}
              >
                <img
                  alt="trump"
                  className="Component-img-67"
                  pose="enter"
                  speed={NaN}
                  src="/mocks/trump-mask.png"
                />
              </div>
              <div
                aria-label="rouletteItem-1"
                onMouseDown={[Function]}
              >
                <img
                  alt="sweatshirt"
                  className="Component-img-67"
                  pose="leave"
                  speed={NaN}
                  src="/mocks/sweatshirt.png"
                />
              </div>
              <div
                aria-label="rouletteItem-2"
                onMouseDown={[Function]}
              >
                <img
                  alt="shoe"
                  className="Component-img-67"
                  pose="leave"
                  speed={NaN}
                  src="/mocks/shoe.png"
                />
              </div>
            </div>
            <br />
            <h5
              className="MuiTypography-root-12 MuiTypography-h5-28 MuiTypography-alignCenter-35"
            >
              Tap the screen, 
              <br />
              win what you tap.
            </h5>
            <button
              aria-label="I want it"
              className="MuiButtonBase-root-55 MuiButton-root-69 MuiButton-contained-80 MuiButton-containedPrimary-81 MuiButton-raised-83 MuiButton-raisedPrimary-84 MuiButton-fullWidth-94"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-70"
              >
                PLAY FOR $1
              </span>
              <span
                className="MuiTouchRipple-root-95"
              />
            </button>
          </a>
        </div>
        <div
          className="Component-footer-5"
        >
          <a
            className="Component-footerLink-6"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-12 MuiTypography-caption-22 MuiTypography-colorTextSecondary-45 MuiTypography-alignCenter-35"
            >
              TERMS
            </span>
          </a>
          <a
            className="Component-footerLink-6"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-12 MuiTypography-caption-22 MuiTypography-colorTextSecondary-45 MuiTypography-alignCenter-35"
            >
              PRIVACY
            </span>
          </a>
          <a
            className="Component-footerLink-6"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-12 MuiTypography-caption-22 MuiTypography-colorTextSecondary-45 MuiTypography-alignCenter-35"
            >
              FAIRNESS
            </span>
          </a>
          <a
            className="Component-footerLink-6"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-12 MuiTypography-caption-22 MuiTypography-colorTextSecondary-45 MuiTypography-alignCenter-35"
            >
              ALL PRIZES
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`when component is mounted when user is not logged in redirects correctly 1`] = `
<div
  name="products"
  path="/products/homepage"
  render={[Function]}
>
   - Render: 
  <div
    id={1}
    name="game"
    path="/game_setting"
    render={[Function]}
  >
    Info -
     
    <div
      className="Component-root-9"
    >
      <div
        className="Component-header-7"
      >
        <div
          className="Component-root-11"
        >
          <img
            alt="diamond"
            className="Component-icon-10"
            src="/icons/diamond.png"
          />
          <p
            className="MuiTypography-root-12 MuiTypography-body1-21"
          >
            0
          </p>
        </div>
        <a
          href="/sign-in"
          onClick={[Function]}
          style={
            Object {
              "textDecoration": "none",
            }
          }
        >
          <p
            className="MuiTypography-root-12 MuiTypography-body1-21 MuiTypography-alignLeft-34"
            style={
              Object {
                "marginRight": "20px",
              }
            }
          >
            Login
          </p>
        </a>
      </div>
      <div
        className="Component-container-4"
      >
        <img
          alt="Prizey"
          className="Component-logoImage-8"
          src="/logo.png"
        />
        <div
          className="Component-caption-2"
        />
        <div
          className="Component-children-3"
        >
          <a
            className="Component-root-1"
            href="/game"
            onClick={[Function]}
          >
            <div
              className="Component-root-68"
            >
              <div
                aria-label="rouletteItem-0"
                onMouseDown={[Function]}
              >
                <img
                  alt="trump"
                  className="Component-img-67"
                  pose="enter"
                  speed={NaN}
                  src="/mocks/trump-mask.png"
                />
              </div>
              <div
                aria-label="rouletteItem-1"
                onMouseDown={[Function]}
              >
                <img
                  alt="sweatshirt"
                  className="Component-img-67"
                  pose="leave"
                  speed={NaN}
                  src="/mocks/sweatshirt.png"
                />
              </div>
              <div
                aria-label="rouletteItem-2"
                onMouseDown={[Function]}
              >
                <img
                  alt="shoe"
                  className="Component-img-67"
                  pose="leave"
                  speed={NaN}
                  src="/mocks/shoe.png"
                />
              </div>
            </div>
            <br />
            <h5
              className="MuiTypography-root-12 MuiTypography-h5-28 MuiTypography-alignCenter-35"
            >
              Tap the screen, 
              <br />
              win what you tap.
            </h5>
            <button
              aria-label="I want it"
              className="MuiButtonBase-root-55 MuiButton-root-69 MuiButton-contained-80 MuiButton-containedPrimary-81 MuiButton-raised-83 MuiButton-raisedPrimary-84 MuiButton-fullWidth-94"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-70"
              >
                PLAY FOR $1
              </span>
              <span
                className="MuiTouchRipple-root-95"
              />
            </button>
          </a>
        </div>
        <div
          className="Component-footer-5"
        >
          <a
            className="Component-footerLink-6"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-12 MuiTypography-caption-22 MuiTypography-colorTextSecondary-45 MuiTypography-alignCenter-35"
            >
              TERMS
            </span>
          </a>
          <a
            className="Component-footerLink-6"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-12 MuiTypography-caption-22 MuiTypography-colorTextSecondary-45 MuiTypography-alignCenter-35"
            >
              PRIVACY
            </span>
          </a>
          <a
            className="Component-footerLink-6"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-12 MuiTypography-caption-22 MuiTypography-colorTextSecondary-45 MuiTypography-alignCenter-35"
            >
              FAIRNESS
            </span>
          </a>
          <a
            className="Component-footerLink-6"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-12 MuiTypography-caption-22 MuiTypography-colorTextSecondary-45 MuiTypography-alignCenter-35"
            >
              ALL PRIZES
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
